# Humana-Agent

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: policy_mapping.json
src/agents/: insurance_qa_agent.py  orchestrator_agent.py  policy_mapping.py  zip_code_agent.py
src/api/controller/: upload_api.py
src/chainlit/: app.py  chainbot.py
src/db/: populate_database.py
src/ingest/: embedding_creator.py  load_pfds.py  split_pds.py
src/query/: query_data.py
src/services/: maps_service.py  openai_service.py  policy_uploader.py  rag_service.py
tests/: test_RAG.py  test_ingest.py
tests/data/: test_cases.py
tests/tuning/: hyperparameter_tuning.py
tests/utils/: AI_QA_tester.py
